--- a/css/estilo.css
+++ b/css/estilo.css
@@ -303,6 +303,9 @@ h3 {
         text-align: center;
         border-bottom: 1px solid #f3f3f3;
     }
+    #topo {
+        width: 100%;
+    }
     #navegacao-mobile li a:hover {
         margin-top: 30px;
         color: #a1a1a1;
