--- a/css/estilo.css
+++ b/css/estilo.css
@@ -342,6 +342,10 @@ h3 {
     #container {
         width: 100%;
     }
+    #uma-coluna #primario {
+        width: 100%;
+        margin: 0 0 20px 0;
+    }
     #primario {
         width: 100%;
         margin: 0 auto;
